# bitmagic-rs

./: .gitmodules  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml
bitmagic-sys/: Cargo.toml  README.md  build.rs
bitmagic-sys/src/: bindings.rs  lib.rs
nix/: rust.nix  sources.json
src/: fixedbitset_api.rs  lib.rs
