[package]
name = "bitmagic"
version = "0.1.0+bitmagic.7.3.1"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"

description = "Rust bindings for the bitmagic library."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/luizirber/bitmagic-rs"

[dependencies]
bitmagic-sys = { version = "0.1.0", path = "bitmagic-sys" }

[features]
bindgen = ["bitmagic-sys/bindgen"]
