[package]
name = "bitmagic"
version = "0.2.5+bitmagic.7.9.3"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"

description = "Rust bindings for the bitmagic library."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/luizirber/bitmagic-rs"

[dependencies]
bitmagic-sys = { version = "0.2.0", path = "bitmagic-sys" }

[features]
bindgen = ["bitmagic-sys/bindgen"]
