[package]
name = "bitmagic-sys"
version = "0.1.1+bitmagic.7.3.1"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Low-level bindings for the bitmagic."
license = "Apache-2.0"
#links = "bm"
readme = "README.md"
repository = "https://github.com/luizirber/bitmagic-rs"

[dependencies]

[build-dependencies]
bindgen = { version = "0.55.0", optional = true }
cmake = "0.1.45"
